--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "xlsx": "^0.18.5"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
