--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MYSQLUSER=root
 MYSQLPASSWORD=qIJuTTsvTAqWSUuHcYOMlFFpKzjJgQPo
 MYSQLDATABASE=railway
 MYSQLPORT=3306
+MYSQL_URL=mysql://root:qIJuTTsvTAqWSUuHcYOMlFFpKzjJgQPo@mysql.railway.internal:3306/railway
