--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ MYSQLUSER=root
 MYSQLPASSWORD=qIJuTTsvTAqWSUuHcYOMlFFpKzjJgQPo
 MYSQLDATABASE=railway
 MYSQLPORT=3306
-MYSQL_URL=mysql://root:qIJuTTsvTAqWSUuHcYOMlFFpKzjJgQPo@mysql.railway.internal:3306/railway
+MYSQL_URL=mysql://root:qIJuTTsvTAqWSUuHcYOMlFFpKzjJgQPo@hopper.proxy.rlwy.net:44449/railway
